Bug 144984 - UI Conditional format dialogs content is not entirely visible
Summary: UI Conditional format dialogs content is not entirely visible
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-10-07 15:20 UTC by Gabor Kelemen (allotropia)
Modified: 2021-10-08 10:46 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the problem in Calc (47.17 KB, image/png)
2021-10-07 15:20 UTC, Gabor Kelemen (allotropia)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (allotropia) 2021-10-07 15:20:18 UTC
Created attachment 175576 [details]
Screenshot of the problem in Calc

When Color scale or Data bar type conditions are selected in the Conditional Formatting dialog, the Maximum part of the settings is only half visible with non-GTK backends.

Steps to reproduce:
    1. In Calc select Format – Conditional – Color Scale or Data Bar

Actual results:
The dialogs contents are not entirely visible.

Expected results:
Right side of the dialog contents should be visible.

LibreOffice details:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: b1488cd6f008049a9aaff7350deeb73cbbd535b6
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: hu-HU (en_US); UI: en-US
Calc: threaded

Not yet in 7.2.0

Additional Information:

Bibisected using bibisect-win64-7.3 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=f72013ca65c7a33991d5fb124b919fe7cde269e2 

author	Caolán McNamara <caolanm@redhat.com>	2021-08-26 15:24:25 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2021-08-26 17:57:16 +0200
commit f72013ca65c7a33991d5fb124b919fe7cde269e2 (patch)

use max of avg digit or 'average char' width to measure Edit space

Adding CC to: Caolán McNamara
Comment 1 Commit Notification 2021-10-08 10:42:56 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a44c77d6548fac62f760ae152ddc09381d005129

tdf#144984 default edit width got wider

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.