tdf#144984 default edit width got wider

at...

commit f72013ca65c7a33991d5fb124b919fe7cde269e2
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Thu Aug 26 15:24:25 2021 +0100

    use max of avg digit or 'average char' width to measure Edit space

where this default was forgotten

Change-Id: I50933ff5c1b8735624609a884fb9fc7701df7f97